Adding related work on automatically selecting indexes and materialized views

--- a/papers.bib
+++ b/papers.bib
@@ -1,34 +1,3 @@
-@article{Stonebraker,
-author = {Stonebraker, Mike and Abadi, Daniel J and Batkin, Adam and Chen, Xuedong and Cherniack, Mitch and Ferreira, Miguel and Lau, Edmond and Lin, Amerson and Madden, Sam and Neil, Elizabeth O and Neil, Pat O and Rasin, Alex and Tran, Nga and Zdonik, Stan},
-file = {:Users/apavel/Documents/p553-stonebraker.pdf:pdf},
-journal = {VLDB},
-pages = {553--564},
-title = {{C-Store : A Column-oriented DBMS}},
-volume = {31},
-year = {2005}
-}
-@article{Zhou2007a,
-author = {Zhou, Jingren and Larson, Per-Ake and Goldstein, Jonathan and Ding, Luping},
-doi = {10.1109/ICDE.2007.367898},
-file = {:Users/apavel/Documents/04221701.pdf:pdf},
-isbn = {1-4244-0802-4},
-journal = {ICDE},
-pages = {526--535},
-publisher = {Ieee},
-title = {{Dynamic Materialized Views}},
-url = {http://ieeexplore.ieee.org/lpdocs/epic03/wrapper.htm?arnumber=4221701},
-volume = {23},
-year = {2007}
-}
-@article{Blakeley1986,
-author = {Blakeley, Josh A and Larson, Per-Ake and Tompa, Frank Wm},
-file = {:Users/apavel/Documents/p61-blakeley.pdf:pdf},
-isbn = {0897911911},
-journal = {ACM},
-pages = {61--71},
-title = {{Efficiently Updating Materialized Views}},
-year = {1986}
-}
 @article{Baker,
 author = {Baker, Jason and Bond, Chris and Corbett, James C and Furman, J J and Khorlin, Andrey and Larson, James and Jean-michel, L and Li, Yawei and Lloyd, Alexander and Yushprakh, Vadim},
 file = {:Users/apavel/Documents/CIDR11\_Paper32 (1).pdf:pdf},
@@ -51,35 +20,12 @@ title = {{Scalable SQL and NoSQL Data Stores}},
 volume = {39},
 year = {2010}
 }
-@article{Idreos2007,
-address = {New York, New York, USA},
-author = {Idreos, Stratos and Kersten, Martin L. and Manegold, Stefan},
-doi = {10.1145/1247480.1247527},
-file = {:Users/apavel/Documents/p413-idreos.pdf:pdf},
-isbn = {9781595936868},
-journal = {SIGMOD},
-keywords = {database cracking,self-organization,updates},
-pages = {413--424},
-publisher = {ACM Press},
-title = {{Updating a cracked database}},
-url = {http://portal.acm.org/citation.cfm?doid=1247480.1247527},
-year = {2007}
-}
 @article{Chang,
 author = {Chang, Fay and Dean, Jeffrey and Ghemawat, Sanjay and Hsieh, Wilson C and Wallach, Deborah A and Burrows, Mike and Chandra, Tushar and Fikes, Andrew and Gruber, Robert E},
 file = {:Users/apavel/Documents/bigtable-osdi06.pdf:pdf},
 journal = {OSDI},
 title = {{Bigtable: A Distributed Storage System for Structured Data}},
 year = {2006}
-}
-@article{Corporation2011,
-author = {Corporation, Super Instruments},
-file = {:Users/apavel/Documents/06106531.pdf:pdf},
-isbn = {9781457702082},
-keywords = {column-oriented,document,key-value,nosql},
-pages = {363--366},
-title = {{Survey on NoSQL Database}},
-year = {2011}
 }
 @article{Decandia2007,
 author = {Decandia, Giuseppe and Hastorun, Deniz and Jampani, Madan and Kakulapati, Gunavardhan and Lakshman, Avinash and Pilchin, Alex and Sivasubramanian, Swaminathan and Vosshall, Peter and Vogels, Werner},
@@ -89,6 +35,32 @@ journal = {SOSP},
 pages = {205--220},
 title = {{Dynamo: Amazon’s Highly Available Key-value Store}},
 year = {2007}
+}
+@article{Gupta1995,
+author = {Gupta, Ashish and Mumick, Inderpal Singh},
+file = {:Users/apavel/Documents/Gupta1995MaintenanceofMaterialized (1).pdf:pdf},
+pages = {1--16},
+title = {{Maintenance of Materialized Views : Problems , Techniques , and Applications}},
+year = {1995}
+}
+@article{Hecht2011,
+author = {Hecht, Robin and Jablonski, Stefan},
+doi = {10.1109/CSC.2011.6138544},
+file = {:Users/apavel/Documents/DatabaseSystemsPaper.pdf:pdf},
+isbn = {978-1-4577-1637-9},
+journal = {2011 International Conference on Cloud and Service Computing},
+month = dec,
+pages = {336--341},
+publisher = {Ieee},
+title = {{NoSQL evaluation: A use case oriented survey}},
+url = {http://ieeexplore.ieee.org/lpdocs/epic03/wrapper.htm?arnumber=6138544},
+year = {2011}
+}
+@article{Idreos,
+author = {Idreos, Stratos},
+file = {:Users/apavel/Documents/p586-idreos.pdf:pdf},
+pages = {586--597},
+title = {{Merging What ’ s Cracked , Cracking What ’ s Merged : Adaptive Indexing in Main-Memory Column-Stores}}
 }
 @article{Idreos2009,
 address = {New York, New York, USA},
@@ -105,18 +77,32 @@ url = {http://portal.acm.org/citation.cfm?doid=1559845.1559878},
 volume = {35},
 year = {2009}
 }
-@article{Hecht2011,
-author = {Hecht, Robin and Jablonski, Stefan},
-doi = {10.1109/CSC.2011.6138544},
-file = {:Users/apavel/Documents/DatabaseSystemsPaper.pdf:pdf},
-isbn = {978-1-4577-1637-9},
-journal = {2011 International Conference on Cloud and Service Computing},
-month = dec,
-pages = {336--341},
-publisher = {Ieee},
-title = {{NoSQL evaluation: A use case oriented survey}},
-url = {http://ieeexplore.ieee.org/lpdocs/epic03/wrapper.htm?arnumber=6138544},
-year = {2011}
+@article{Pirk2007,
+address = {New York, New York, USA},
+author = {Idreos, Stratos and Manegold, Stefan and Kersten, Martin},
+doi = {10.1145/2619228.2619232},
+file = {:Users/apavel/Documents/cidr07p07.pdf:pdf},
+isbn = {9781450329712},
+journal = {CIDR},
+pages = {1--8},
+publisher = {ACM Press},
+title = {{Database cracking}},
+url = {http://dl.acm.org/citation.cfm?doid=2619228.2619232},
+volume = {3},
+year = {2007}
+}
+@article{Kate,
+author = {Kate, Bryan and Kohler, Eddie and Kester, Michael S and Narula, Neha and Mao, Yandong and Morris, Robert},
+file = {:Users/apavel/Documents/pequod-nsdi14.pdf:pdf},
+title = {{Easy Freshness with Pequod Cache Joins}}
+}
+@article{Larson1985,
+author = {Larson, P.-A. and Yang, H. Z.},
+file = {:Users/apavel/Documents/P259.pdf:pdf},
+journal = {VLDB},
+pages = {259--269},
+title = {{Computing Queries from Derived Relations *}},
+year = {1985}
 }
 @article{Leavitt2010,
 author = {Leavitt, Neal},
@@ -132,74 +118,28 @@ url = {http://ieeexplore.ieee.org/lpdocs/epic03/wrapper.htm?arnumber=5410700},
 volume = {43},
 year = {2010}
 }
-@article{Larson1985,
-author = {Larson, P.-A. and Yang, H. Z.},
-file = {:Users/apavel/Documents/P259.pdf:pdf},
-journal = {VLDB},
-pages = {259--269},
-title = {{Computing Queries from Derived Relations *}},
-year = {1985}
-}
-@article{Yang1997,
-author = {Yang, Jian and Karlapalem, Kamalakar and Li, Qing},
-file = {:Users/apavel/Documents/yang.pdf:pdf},
-journal = {VLDB},
-title = {{Algorithms for Materialized View Design in Data Warehousing Environment}},
-volume = {23},
-year = {1997}
-}
-@article{French1995,
-author = {French, Clark},
-file = {:Users/apavel/Documents/french95sigmod.pdf:pdf},
-journal = {SIGMOD},
-pages = {449--450},
-title = {{“One Size Fits All” Database Architectures Do Not Work for DSS}},
-year = {1995}
-}
-@article{Gupta1995,
-author = {Gupta, Ashish and Mumick, Inderpal Singh},
-file = {:Users/apavel/Documents/Gupta1995MaintenanceofMaterialized (1).pdf:pdf},
-pages = {1--16},
-title = {{Maintenance of Materialized Views : Problems , Techniques , and Applications}},
-year = {1995}
-}
-@article{Pirk2007,
-address = {New York, New York, USA},
-author = {Idreos, Stratos and Manegold, Stefan and Kersten, Martin},
-doi = {10.1145/2619228.2619232},
-file = {:Users/apavel/Documents/cidr07p07.pdf:pdf},
-isbn = {9781450329712},
-journal = {CIDR},
-pages = {1--8},
-publisher = {ACM Press},
-title = {{Database cracking}},
-url = {http://dl.acm.org/citation.cfm?doid=2619228.2619232},
-volume = {3},
-year = {2007}
-}
-@article{Shukla1998,
-author = {Shukla, Amit and Deshpande, Prasad and Naughton, Jeffrey F},
-file = {:Users/apavel/Documents/p488.pdf:pdf},
-journal = {VLDB},
-pages = {488--499},
-title = {{Materialized View Selection for Multidimensional Datasets}},
-volume = {24},
-year = {1998}
-}
-@article{Zhou2007,
-author = {Zhou, Jingren and Larson, Per-Ake and Elmongui, Hicham G.},
-file = {:Users/apavel/Documents/p231-zhou.pdf:pdf},
-isbn = {9781595936493},
-journal = {VLDB},
-pages = {231--242},
-title = {{Lazy Maintenance of Materialized Views}},
-year = {2007}
+@misc{MongoDB2014,
+author = {MongoDB},
+file = {:Users/apavel/Downloads/Data Modeling Introduction — MongoDB Manual 2.6.pdf:pdf},
+pages = {5--7},
+title = {{Data Modeling Introduction}},
+url = {http://docs.mongodb.org/manual/core/data-modeling-introduction/},
+urldate = {12/1/2014},
+year = {2014}
 }
 @article{Ntarmos,
 author = {Ntarmos, Nikos and Triantafillou, Peter},
 file = {:Users/apavel/Documents/nosql\_vldb2014.pdf:pdf},
 pages = {493--504},
 title = {{Rank Join Queries in NoSQL Databases}}
+}
+@article{Sapia1999,
+author = {Sapia, Carsten},
+file = {:Users/apavel/Documents/paper2.pdf:pdf},
+journal = {DMDW},
+pages = {1--10},
+title = {{On Modeling and Predicting Query Behavior in OLAP Systems}},
+year = {1999}
 }
 @article{Stonebraker2010,
 author = {Stonebraker, Michael},
@@ -215,10 +155,107 @@ url = {http://portal.acm.org/citation.cfm?doid=1721654.1721659},
 volume = {53},
 year = {2010}
 }
+@article{Stonebraker,
+author = {Stonebraker, Mike and Abadi, Daniel J and Batkin, Adam and Chen, Xuedong and Cherniack, Mitch and Ferreira, Miguel and Lau, Edmond and Lin, Amerson and Madden, Sam and Neil, Elizabeth O and Neil, Pat O and Rasin, Alex and Tran, Nga and Zdonik, Stan},
+file = {:Users/apavel/Documents/p553-stonebraker.pdf:pdf},
+journal = {VLDB},
+pages = {553--564},
+title = {{C-Store : A Column-oriented DBMS}},
+volume = {31},
+year = {2005}
+}
 @article{Strauch,
 author = {Strauch, Christof},
 file = {:Users/apavel/Documents/nosql\_databases.pdf:pdf},
 title = {{NoSQL Databases}}
+}
+@article{Yang1997,
+author = {Yang, Jian and Karlapalem, Kamalakar and Li, Qing},
+file = {:Users/apavel/Documents/yang.pdf:pdf},
+journal = {VLDB},
+title = {{Algorithms for Materialized View Design in Data Warehousing Environment}},
+volume = {23},
+year = {1997}
+}
+@article{Zhou2007,
+author = {Zhou, Jingren and Larson, Per-Ake and Elmongui, Hicham G.},
+file = {:Users/apavel/Documents/p231-zhou.pdf:pdf},
+isbn = {9781595936493},
+journal = {VLDB},
+pages = {231--242},
+title = {{Lazy Maintenance of Materialized Views}},
+year = {2007}
+}
+@article{Zhou2007a,
+author = {Zhou, Jingren and Larson, Per-Ake and Goldstein, Jonathan and Ding, Luping},
+doi = {10.1109/ICDE.2007.367898},
+file = {:Users/apavel/Documents/04221701.pdf:pdf},
+isbn = {1-4244-0802-4},
+journal = {ICDE},
+pages = {526--535},
+publisher = {Ieee},
+title = {{Dynamic Materialized Views}},
+url = {http://ieeexplore.ieee.org/lpdocs/epic03/wrapper.htm?arnumber=4221701},
+volume = {23},
+year = {2007}
+}
+@article{Agrawal2000,
+author = {Agrawal, Sanjay and Chaudhuri, Surajit and Narasayya, Vivek},
+file = {:Users/apavel/Documents/vldb00 (1).pdf:pdf},
+journal = {VLDB},
+number = {Section 5},
+title = {{Automated Selection of Materialized Views and Indexes for SQL Databases}},
+volume = {26},
+year = {2000}
+}
+@article{Blakeley1986,
+author = {Blakeley, Josh A and Larson, Per-Ake and Tompa, Frank Wm},
+file = {:Users/apavel/Documents/p61-blakeley.pdf:pdf},
+isbn = {0897911911},
+journal = {ACM},
+pages = {61--71},
+title = {{Efficiently Updating Materialized Views}},
+year = {1986}
+}
+@article{Corporation2011,
+author = {Corporation, Super Instruments},
+file = {:Users/apavel/Documents/06106531.pdf:pdf},
+isbn = {9781457702082},
+keywords = {column-oriented,document,key-value,nosql},
+pages = {363--366},
+title = {{Survey on NoSQL Database}},
+year = {2011}
+}
+@article{French1995,
+author = {French, Clark},
+file = {:Users/apavel/Documents/french95sigmod.pdf:pdf},
+journal = {SIGMOD},
+pages = {449--450},
+title = {{“One Size Fits All” Database Architectures Do Not Work for DSS}},
+year = {1995}
+}
+@article{Idreos2007,
+address = {New York, New York, USA},
+author = {Idreos, Stratos and Kersten, Martin L. and Manegold, Stefan},
+doi = {10.1145/1247480.1247527},
+file = {:Users/apavel/Documents/p413-idreos.pdf:pdf},
+isbn = {9781595936868},
+journal = {SIGMOD},
+keywords = {database cracking,self-organization,updates},
+pages = {413--424},
+publisher = {ACM Press},
+title = {{Updating a cracked database}},
+url = {http://portal.acm.org/citation.cfm?doid=1247480.1247527},
+year = {2007}
+}
+@article{Shukla1998,
+author = {Shukla, Amit and Deshpande, Prasad and Naughton, Jeffrey F},
+file = {:Users/apavel/Documents/p488.pdf:pdf},
+journal = {VLDB},
+pages = {488--499},
+title = {{Materialized View Selection for Multidimensional Datasets}},
+volume = {24},
+year = {1998}
 }
 @misc{Wanschik2010,
 author = {Wanschik, Thomas},
@@ -234,40 +271,35 @@ file = {:Users/apavel/Documents/1999-48.pdf:pdf},
 pages = {1--10},
 title = {{Data Management for XML : Research Directions}}
 }
-@article{Agrawal2000,
-author = {Agrawal, Sanjay and Chaudhuri, Surajit and Narasayya, Vivek},
-file = {:Users/apavel/Documents/vldb00 (1).pdf:pdf},
-journal = {VLDB},
-number = {Section 5},
-title = {{Automated Selection of Materialized Views and Indexes for SQL Databases}},
-volume = {26},
-year = {2000}
+@article{Goldstein2001,
+author = {Goldstein, Jonathan and Larson, Per-\aa ke},
+file = {:Users/apavel/Documents/p331-goldstein.pdf:pdf},
+isbn = {1581133324},
+journal = {SIGMOD},
+keywords = {materialized views,query optimization,view matching},
+pages = {331--342},
+title = {{Optimizing Queries Using Materialized Views: A Practical, Scalable Solution}},
+year = {2001}
 }
-@article{Idreos,
-author = {Idreos, Stratos},
-file = {:Users/apavel/Documents/p586-idreos.pdf:pdf},
-pages = {586--597},
-title = {{Merging What ’ s Cracked , Cracking What ’ s Merged : Adaptive Indexing in Main-Memory Column-Stores}}
+@article{Gupta2005,
+author = {Gupta, H. and Mumick, I.S.},
+doi = {10.1109/TKDE.2005.16},
+file = {:Users/apavel/Documents/01363763.pdf:pdf},
+issn = {1041-4347},
+journal = {IEEE Transactions on Knowledge and Data Engineering},
+month = jan,
+number = {1},
+pages = {24--43},
+title = {{Selection of views to materialize in a data warehouse}},
+url = {http://ieeexplore.ieee.org/lpdocs/epic03/wrapper.htm?arnumber=1363763},
+volume = {17},
+year = {2005}
 }
-@article{Kate,
-author = {Kate, Bryan and Kohler, Eddie and Kester, Michael S and Narula, Neha and Mao, Yandong and Morris, Robert},
-file = {:Users/apavel/Documents/pequod-nsdi14.pdf:pdf},
-title = {{Easy Freshness with Pequod Cache Joins}}
-}
-@article{Sapia1999,
-author = {Sapia, Carsten},
-file = {:Users/apavel/Documents/paper2.pdf:pdf},
-journal = {DMDW},
-pages = {1--10},
-title = {{On Modeling and Predicting Query Behavior in OLAP Systems}},
-year = {1999}
-}
-@misc{MongoDB2014,
-author = {MongoDB},
-file = {:Users/apavel/Downloads/Data Modeling Introduction — MongoDB Manual 2.6.pdf:pdf},
-pages = {5--7},
-title = {{Data Modeling Introduction}},
-url = {http://docs.mongodb.org/manual/core/data-modeling-introduction/},
-urldate = {12/1/2014},
-year = {2014}
+@article{Zilio2004,
+author = {Zilio, Daniel C and Zuzarte, Calisto and Lohman, Guy M and Cochrane, Roberta J and Lohman, M and Colby, J and Colby, Latha and Valentin, Gary},
+file = {:Users/apavel/Documents/01301362.pdf:pdf},
+isbn = {0769521142},
+journal = {IEEE ICAC},
+title = {{Recommending Materialized Views and Indexes with the IBM DB2 Design Advisor}},
+year = {2004}
 }
