related work minor

--- a/related_work.tex
+++ b/related_work.tex
@@ -1,6 +1,6 @@
 \section{Related Work}
 
-Our work is related to existing research in database cracking, materialized views, customizing key value stores, and discussions in the MongoDB development community.
+PeerDB is related to existing research in database cracking, materialized views, customizing key value stores, and discussions in the MongoDB development community. Our automatic embedding algorithm is related to work in automatically tuning databases.
 
 \subsection{Materialized views}
 
