--- a/main.tex
+++ b/main.tex
@@ -32,6 +32,9 @@ Docker images used when running benchmarks are available at: \\
 \newcolumntype{C}[1]{>{\centering\let\newline\\\arraybackslash\hspace{0pt}}m{#1}}
 \newcolumntype{R}[1]{>{\raggedleft\let\newline\\\arraybackslash\hspace{0pt}}m{#1}}
 
+\usepackage{tikz}
+\usetikzlibrary{positioning,calc,through}
+
 
 % llt: Define a global style for URLs, rather that the default one
 \makeatletter
