--- a/future_work.tex
+++ b/future_work.tex
@@ -7,7 +7,7 @@ This section will address each of these future work areas in turn.
 \subsection{Benchmarking}
 
 \subsection{Automatic algorithm}
-One direction for improving the automatic algorithm is extending it's applicability to more use cases. For instance, the algorithm does not currently consider all possible sets of queries (only those that strictly augment the smallest set). In future work, we extend the model to encompass more query sets. As mentioned before, future work may also extend the algorithm to handle cases where we embed entire subdocuments without having the document separately referenced (no help from PeerDB). In addition, we want to extend it to handle reverse queries. Lastly, we will augment the automatic algorithm with a more global view of the workload and system so that we could jointly figure out embeddings for all documents at one time.
+One direction for improving the automatic algorithm is extending it's applicability to more use cases. For instance, the algorithm does not currently consider all possible sets of queries (only those that strictly augment the smallest set). In future work, we extend the model to encompass more query sets. As mentioned before, future work may also extend the algorithm to handle cases where we embed entire subdocuments without having the document separately referenced (no help from PeerDB). In addition, we want to extend it to handle reverse queries.
 
 Another direction for improving the automatic algorithm is verifying and enhancing the accuracy of the cost model and input parameters. 
 Future work could learn parameters, simulate possible configurations for greater accuracy, and compare our current cost model closely to actual system performance. 
